Refactor client info to CSession and improve error handling
Replaced stClientInfo with CSession for better encapsulation and moved related structures to Session.h/cpp. Inlined IOCP binding into AcceptThread, improved assertions, and enhanced WSARecv error handling. Updated project files to include new Session files.

--- a/myiocpserver/myiocpserver.vcxproj
+++ b/myiocpserver/myiocpserver.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="ExceptionFilter.cpp" />
     <ClCompile Include="Lock.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="Session.cpp" />
     <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="ExceptionFilter.h" />
     <ClInclude Include="Lock.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="Session.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="DebugHelper.h" />
     <ClInclude Include="Util.h" />
