Add generic object pool implementation
Introduced CObjectPool template class for efficient object reuse with thread safety. Updated project files to include ObjectPool.cpp and ObjectPool.h.

--- a/myiocpserver/myiocpserver.vcxproj
+++ b/myiocpserver/myiocpserver.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="ExceptionFilter.cpp" />
     <ClCompile Include="Lock.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="Thread.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="ExceptionFilter.h" />
     <ClInclude Include="Lock.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Session.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="DebugHelper.h" />
