Add socket callback interface and refactor overlapped structs
Introduced ISocketCallBack interface for socket event handling and integrated it into IOCompletionPort. Refactored Session's overlapped structures for clarity and consistency, renaming stOverlappedEx to COverlappedEx and updating related code. Cleaned up unused code in ObjectPool.h and updated project files to include the new header.

--- a/myiocpserver/myiocpserver.vcxproj.filters
+++ b/myiocpserver/myiocpserver.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="TLSObjectPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SocketCallBack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
