--- a/myiocpserver/myiocpserver.vcxproj
+++ b/myiocpserver/myiocpserver.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Session.h" />
+    <ClInclude Include="SocketCallBack.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="DebugHelper.h" />
     <ClInclude Include="TLSObjectPool.h" />
