--- a/myiocpserver/myiocpserver.vcxproj
+++ b/myiocpserver/myiocpserver.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="Singleton.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="TLSObjectPool.cpp" />
     <ClCompile Include="Util.cpp" />
