--- a/myiocpserver/myiocpserver.vcxproj.filters
+++ b/myiocpserver/myiocpserver.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="TLSObjectPool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
